force-app/main/default/objects/Tracking__c/Tracking__c.object-meta.xml
<CustomObject>
    <description>Tracking-Daten eines Benutzers des Maklerportals</description>
    <label>Tracking</label>
    <nameField>
        <label>Tracking-Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>