force-app/main/default/objects/Tracking__c/fields/Benutzer__c.field-meta.xml
<CustomField>
    <fullName>Benutzer__c</fullName>
    <description>Der Benutzer, den diese Trackinginfo betrifft</description>
    <label>Immo Benutzer</label>
    <referenceTo>Realty_User__c</referenceTo>
    <relationshipLabel>Trackings</relationshipLabel>
    <relationshipName>Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>