force-app/main/default/objects/Tracking__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Tracking-Daten</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>