force-app/main/default/objects/Tracking__c/fields/Typ__c.field-meta.xml
<CustomField>
    <fullName>Typ__c</fullName>
    <label>Tracking-Typ</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immobilie</fullName>
                <default>true</default>
                <label>Immobilie</label>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Dokument</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>